--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Wendy G. Bite</title>
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/stylesheets/style.min.css">
 </head>
 <body>
 	<h1>Wendy G. Bite</h1>
