--- a/public/html/resume.html
+++ b/public/html/resume.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Wendy G. Bite | Resume</title>
-	<link rel="stylesheet" href=""../css/stylesheets/style.min.css"">
+	<link rel="stylesheet" href="../css/stylesheets/style.min.css">
 </head>
 <body>
 	<h1>Wendy G. Bite</h1>
